# todo

./: .gitignore  Cargo.toml  README.md  tasks.json
.zed/: debug.json
frontend/: package-lock.json  package.json
nanoservices/todo/core/: Cargo.toml
nanoservices/todo/core/src/: enums.rs  main.rs  structs.rs
nanoservices/todo/core/src/api/basic_actions/: create.rs  delete.rs  get.rs  update.rs
nanoservices/todo/dal/: Cargo.toml
nanoservices/todo/dal/src/: json_file.rs
nanoservices/todo/networking/actix_server/: Cargo.toml
nanoservices/todo/networking/actix_server/src/api/: mod.rs
nanoservices/todo/networking/actix_server/src/api/basic_actions/: create.rs  delete.rs  get.rs  mod.rs  update.rs
shared/: Cargo.toml
shared/src/: errors.rs  token.rs
